@@ -3,6 +3,7 @@
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:plone="http://namespaces.plone.org/plone"
     i18n_domain="beyondskins.sports">
 
   <five:registerPackage package="." initialize=".initialize" />
@@ -14,6 +15,18 @@
       description="Installs the beyondskins.sports package"
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
+
+  <genericsetup:registerProfile
+      name="uninstall"
+      title="beyondskins.sports: Uninstall profile for Plone 4 Diazo Theme"
+      directory="profiles/uninstall"
+      description="Uninstalls the beyondskins.sports package"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+
   <!-- -*- extra stuff goes here -*- -->
+
+  <include package="plone.resource" file="meta.zcml"/>
+  <plone:static directory="static" type="theme" name="beyondskins.sports" />
   
 </configure>
