@@ -1,0 +1,4 @@
+<theme>
+    <name>beyondskins.sports</name>
+    <enabled>false</enabled>
+</theme>
