@@ -4,6 +4,8 @@ Changelog
 0.1dev (unreleased)
 -------------------
 
+- Added a GenericSetup Uninstall profile [macagua]
+
 - Added diazo theme settings for GenericSetup default profile [macagua]
 
 - Remove duplicute theme files [macagua]
